WIP add auth filter for PSK header
